# test-pyckage-github

./: .buildinfo  01_about.html  02_installation.html  02_source.html  03_authors.html  03_usage.html  04_contributing.html  04_source.html  05_authors.html  05_release_notes.html  06_authors.html  06_contributing.html  07_contributing.html  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: release.yml
_sources/: 02_installation.rst.txt  index.rst.txt
docs/source/: 03_authors.rst  03_usage.rst  conf.py
requirements/: dev.txt
tests/: test_version.py
